--- a/FowlerSite/Views/Games/Create.cshtml
+++ b/FowlerSite/Views/Games/Create.cshtml
@@ -11,11 +11,11 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" data-parsley-validate="">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
+                <input asp-for="Name" class="form-control" data-parsley-minlength="3" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
