--- a/FowlerSite/Views/Shared/_Layout.cshtml
+++ b/FowlerSite/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
     <link rel="stylesheet" href="~/assets/vendor/bootstrap/css/bootstrap-grid.css">
     <link rel="stylesheet" href="~/assets/vendor/bootstrap/css/bootstrap-reboot.css">
     <link rel="stylesheet" href="~/assets/vendor/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="~/assets/css/parsley.css">
 
     <!-- FontAwesome -->
     <script defer src="~/assets/vendor/fontawesome-free/js/all.js"></script>
@@ -206,6 +207,9 @@
 
         <!-- nK Share -->
         <script src="~/assets/plugins/nk-share/nk-share.js"></script>
+
+        <!-- Parsley (For Games Title Validation/Sanitation) -->
+        <script src="~/assets/js/parsley.js"></script>
 
         <!-- GoodGames -->
         <script src="~/assets/js/goodgames.min.js"></script>
